--- a/index.html
+++ b/index.html
@@ -14,13 +14,87 @@
 <body>
     <div class="header_bg">
         <img src="https://cdn.zoutons.com/images/home/biscuit_new.jpg" alt="headerbg">
-        heder
+    </div>
+    <div class="sidebar" id="sidebarmenu">
+        <div class="top">
+            <a href="/"> 
+                <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
+                    viewBox="15 0 170 40" fill="currentColor">
+                    <defs> </defs>
+                    <g id="_Group_" data-name="<Group>">
+                        <g id="_Group_2" data-name="<Group>">
+                            <path class="cls-1"
+                                d="M19.22,32.24c-1.19,0-1.78-.44-1.78-1.32V28.19A6.34,6.34,0,0,1,18,27a12.13,12.13,0,0,1,.92-1.36c.39-.52.89-1.12,1.48-1.81s1.32-1.51,2.16-2.45l6.4-7.1-9.69.38c-1-.19-1.5-.93-1.5-2.21a7.18,7.18,0,0,1,.61-2.78h13c.5,0,1,0,1.39,0l1.39-.07c.09.47.17.94.23,1.41a8,8,0,0,1,.1,1.13,9.09,9.09,0,0,1-.19,2,3.41,3.41,0,0,1-.85,1.48L23.13,27c0,.25.15.37.47.37h7.75a4,4,0,0,1,2.73.71A2.52,2.52,0,0,1,34.83,30a5.62,5.62,0,0,1-.7,2.44,7.63,7.63,0,0,0-1.67-.21c-.58,0-1.23,0-1.95,0Z">
+                            </path>
+                            <path class="cls-1"
+                                d="M48.8,32.71A12.35,12.35,0,0,1,44.68,32a9.62,9.62,0,0,1-3.5-2.14,10.68,10.68,0,0,1-2.42-3.55,12.37,12.37,0,0,1-.92-4.94,13.14,13.14,0,0,1,.92-5,11.44,11.44,0,0,1,2.49-3.83,11.18,11.18,0,0,1,3.69-2.45,11.64,11.64,0,0,1,4.47-.87,12.25,12.25,0,0,1,4.11.71A9.74,9.74,0,0,1,57,12.09a10.68,10.68,0,0,1,2.42,3.55,12.32,12.32,0,0,1,.91,4.93,13.11,13.11,0,0,1-.91,5A11.45,11.45,0,0,1,57,29.39a11.33,11.33,0,0,1-3.7,2.45A11.62,11.62,0,0,1,48.8,32.71Zm.37-4.47a6.21,6.21,0,0,0,2.21-.4,5,5,0,0,0,1.91-1.29,6.48,6.48,0,0,0,1.31-2.28A9.92,9.92,0,0,0,55.1,21a9.45,9.45,0,0,0-.54-3.41,6.19,6.19,0,0,0-1.41-2.23,5.17,5.17,0,0,0-1.95-1.22A6.66,6.66,0,0,0,49,13.71a6.06,6.06,0,0,0-2.21.42,5.33,5.33,0,0,0-1.9,1.3,6.32,6.32,0,0,0-1.32,2.25A9.93,9.93,0,0,0,43.11,21a9.45,9.45,0,0,0,.54,3.41,6.19,6.19,0,0,0,1.41,2.23A5.29,5.29,0,0,0,47,27.86,6.56,6.56,0,0,0,49.17,28.24Z">
+                            </path>
+                            <path class="cls-1"
+                                d="M78.23,30c-.72.56-1.36,1-1.93,1.39a8.39,8.39,0,0,1-1.6.82,7.58,7.58,0,0,1-1.48.4,9.63,9.63,0,0,1-1.57.12A6.68,6.68,0,0,1,66.9,31c-1.22-1.14-1.83-3-1.83-5.53,0-.53,0-1.23,0-2.09s0-1.75,0-2.68,0-1.82,0-2.68,0-1.57,0-2.14A30.26,30.26,0,0,0,65,12.56a5,5,0,0,0-.75-2.09,22.24,22.24,0,0,1,2.18-.9,5.61,5.61,0,0,1,1.81-.33,4.61,4.61,0,0,1,1.08.1,3.32,3.32,0,0,1,.94.37V24.15a4.79,4.79,0,0,0,.9,3.12,3.51,3.51,0,0,0,2.91,1.11,9,9,0,0,0,2.1-.26,13.11,13.11,0,0,0,2-.63V10.75a1.72,1.72,0,0,1,.91-1.18,4.21,4.21,0,0,1,1.81-.33,5.58,5.58,0,0,1,1.37.19,2.72,2.72,0,0,1,1.08.52v14.9c0,1.13,0,2.08.07,2.85s.11,1.41.19,1.93a8.22,8.22,0,0,0,.28,1.27,4.35,4.35,0,0,0,.4.87,4.82,4.82,0,0,1-1.62.75,7.47,7.47,0,0,1-1.58.19,6.25,6.25,0,0,1-.92-.08,2.94,2.94,0,0,1-.87-.25,4.74,4.74,0,0,1-.42-1A8.37,8.37,0,0,1,78.56,30Z">
+                            </path>
+                            <path class="cls-1"
+                                d="M101.5,28.43a4.33,4.33,0,0,1-.3,1.6,4.11,4.11,0,0,1-.94,1.36,4.47,4.47,0,0,1-1.58,1,6.28,6.28,0,0,1-2.25.36,8.12,8.12,0,0,1-2.17-.29,4.46,4.46,0,0,1-1.81-1,4.74,4.74,0,0,1-1.24-1.86,8,8,0,0,1-.47-3V14.23H87.92a3.77,3.77,0,0,1-.26-1,6.39,6.39,0,0,1-.07-1,2.88,2.88,0,0,1,.23-1.25,3.92,3.92,0,0,1,.61-.91h2.31V6.38a4.66,4.66,0,0,1,2-2A5.2,5.2,0,0,1,95,3.79a4.89,4.89,0,0,1,.66,0,2.08,2.08,0,0,1,.56.14l-.28,6.16h5.26a6.72,6.72,0,0,1,.29,1.88,2.82,2.82,0,0,1-.26,1.29,6.26,6.26,0,0,1-.59.92h-4.7V26.08A2.24,2.24,0,0,0,96.64,28a3.55,3.55,0,0,0,2.18.56,6.56,6.56,0,0,0,1.41-.16,3.79,3.79,0,0,0,1.27-.5Z">
+                            </path>
+                            <path class="cls-1"
+                                d="M114.2,32.71a12.35,12.35,0,0,1-4.12-.71,9.62,9.62,0,0,1-3.5-2.14,10.68,10.68,0,0,1-2.42-3.55,12.37,12.37,0,0,1-.92-4.94,13.14,13.14,0,0,1,.92-5,11.44,11.44,0,0,1,2.49-3.83,11.18,11.18,0,0,1,3.69-2.45,11.64,11.64,0,0,1,4.47-.87,12.25,12.25,0,0,1,4.11.71,9.66,9.66,0,0,1,3.51,2.14,10.68,10.68,0,0,1,2.42,3.55,12.32,12.32,0,0,1,.91,4.93,13.11,13.11,0,0,1-.91,5,11.45,11.45,0,0,1-2.49,3.81,11.22,11.22,0,0,1-3.7,2.45A11.59,11.59,0,0,1,114.2,32.71Zm.37-4.47a6.21,6.21,0,0,0,2.21-.4,5,5,0,0,0,1.91-1.29A6.65,6.65,0,0,0,120,24.27,10.19,10.19,0,0,0,120.5,21a9.45,9.45,0,0,0-.54-3.41,6.19,6.19,0,0,0-1.41-2.23,5.17,5.17,0,0,0-2-1.22,6.61,6.61,0,0,0-2.17-.38,6.06,6.06,0,0,0-2.21.42,5.33,5.33,0,0,0-1.9,1.3A6.32,6.32,0,0,0,109,17.68a9.93,9.93,0,0,0-.49,3.32,9.45,9.45,0,0,0,.54,3.41,6.19,6.19,0,0,0,1.41,2.23,5.29,5.29,0,0,0,2,1.22A6.56,6.56,0,0,0,114.57,28.24Z">
+                            </path>
+                            <path class="cls-1"
+                                d="M144.2,17.71a4.62,4.62,0,0,0-.9-3.08,3.78,3.78,0,0,0-3.05-1.06,12.89,12.89,0,0,0-2.35.23,10.12,10.12,0,0,0-2.12.62V32.09a5.61,5.61,0,0,1-1.08.45,4.75,4.75,0,0,1-1.32.17,4.34,4.34,0,0,1-2-.4,1.74,1.74,0,0,1-.73-1.67V17.05q0-1.5,0-2.52a17.06,17.06,0,0,0-.11-1.76,8,8,0,0,0-.26-1.27,5.76,5.76,0,0,0-.45-1,15.64,15.64,0,0,1,2.12-1,5.38,5.38,0,0,1,1.64-.28,7.43,7.43,0,0,1,.94.07,2.63,2.63,0,0,1,.75.21,2.65,2.65,0,0,1,.29,1.11c0,.45,0,.87,0,1.25h.29a13.84,13.84,0,0,1,3.76-2.12,10.29,10.29,0,0,1,3.15-.52A6.85,6.85,0,0,1,147.53,11c1.26,1.14,1.88,3,1.88,5.52,0,.54,0,1.23,0,2.1s0,1.75,0,2.68,0,1.82,0,2.7,0,1.6,0,2.16a24.3,24.3,0,0,0,.17,3.29,5.37,5.37,0,0,0,.72,2.07,6.35,6.35,0,0,1-1.67,1,4.09,4.09,0,0,1-1.38.24A3,3,0,0,1,145,32a3.64,3.64,0,0,1-.8-2.72Z">
+                            </path>
+                            <path class="cls-1"
+                                d="M154.68,26.59a6.27,6.27,0,0,0,2.14,1.18,10,10,0,0,0,3.27.47,4.59,4.59,0,0,0,2.75-.61,2.17,2.17,0,0,0,.77-1.79,1.61,1.61,0,0,0-.68-1.32,8.5,8.5,0,0,0-1.72-1c-.68-.3-1.43-.6-2.23-.92a11,11,0,0,1-2.23-1.17A6.27,6.27,0,0,1,155,19.71a4.89,4.89,0,0,1-.68-2.66,7.91,7.91,0,0,1,.59-3.06,6.88,6.88,0,0,1,1.76-2.47,8.68,8.68,0,0,1,2.87-1.67,11.79,11.79,0,0,1,4-.61,12.73,12.73,0,0,1,2.73.28,5.28,5.28,0,0,1,1.88.76,5.35,5.35,0,0,1,.35,1.15,6.42,6.42,0,0,1,.12,1.2,5.14,5.14,0,0,1-.12,1.17,3.78,3.78,0,0,1-.31.9,6.35,6.35,0,0,0-1.95-.71,12.43,12.43,0,0,0-2.89-.33,4.64,4.64,0,0,0-2.82.66,2.11,2.11,0,0,0-.85,1.74,1.38,1.38,0,0,0,.68,1.2,9.5,9.5,0,0,0,1.72.85c.69.26,1.44.55,2.23.87a8.74,8.74,0,0,1,2.24,1.27,6.48,6.48,0,0,1,1.71,2,6.13,6.13,0,0,1,.69,3.08,6.89,6.89,0,0,1-.62,2.9,6.6,6.6,0,0,1-1.76,2.32,8.74,8.74,0,0,1-2.8,1.58,10.85,10.85,0,0,1-3.66.59,8.45,8.45,0,0,1-4.63-.94,2.75,2.75,0,0,1-1.34-2.31,7.33,7.33,0,0,1,.16-1.43A8.68,8.68,0,0,1,154.68,26.59Z">
+                            </path>
+                        </g>
+                        <g id="_Group_3" data-name="<Group>">
+                            <path class="cls-1"
+                                d="M180.34,31a.88.88,0,0,1,.63.22.86.86,0,0,1,.23.65.76.76,0,0,1-.22.58.74.74,0,0,1-.55.21.9.9,0,0,1-.63-.22.79.79,0,0,1-.26-.64.76.76,0,0,1,.8-.8Z">
+                            </path>
+                            <path class="cls-1"
+                                d="M180.47,25.62a1.79,1.79,0,0,1,.54.77,2.59,2.59,0,0,1,.19,1,2.64,2.64,0,0,1-.22,1.1,2.69,2.69,0,0,1-.6.89,2.81,2.81,0,0,1-.9.59,3.06,3.06,0,0,1-1.15.21,3.3,3.3,0,0,1-1.29-.25,2.85,2.85,0,0,1-1-.67,3.07,3.07,0,0,1-.63-1,3.23,3.23,0,0,1-.22-1.16,3.84,3.84,0,0,1,.09-.83,1.68,1.68,0,0,1,.27-.66,1.31,1.31,0,0,1,.43-.06,1.72,1.72,0,0,1,.44.06,1.07,1.07,0,0,1,.36.12,1.2,1.2,0,0,0-.18.34,2.88,2.88,0,0,0-.15.47,4.27,4.27,0,0,0-.11.56,3.9,3.9,0,0,0,0,.59.64.64,0,0,0,.11.33,1.61,1.61,0,0,0,.34.36,2.24,2.24,0,0,0,.58.29,2.47,2.47,0,0,0,.81.12,2.3,2.3,0,0,0,.84-.14,1.45,1.45,0,0,0,.57-.37,1.46,1.46,0,0,0,.31-.54,2.48,2.48,0,0,0,.1-.68,2.23,2.23,0,0,0-.15-.83,1.83,1.83,0,0,0-.39-.62,1.47,1.47,0,0,1,.55-.09h.24Z">
+                            </path>
+                            <path class="cls-1"
+                                d="M181.2,22.06a3.13,3.13,0,0,1-.18,1.05,2.46,2.46,0,0,1-.55.9,2.65,2.65,0,0,1-.9.61,3.08,3.08,0,0,1-1.26.24,3.23,3.23,0,0,1-1.27-.24,2.76,2.76,0,0,1-1-.63,2.88,2.88,0,0,1-.63-.94,3.11,3.11,0,0,1,0-2.19,2.46,2.46,0,0,1,.55-.9,2.82,2.82,0,0,1,.9-.62,3.26,3.26,0,0,1,1.26-.23,3.44,3.44,0,0,1,1.28.23,2.91,2.91,0,0,1,1.6,1.58A2.93,2.93,0,0,1,181.2,22.06ZM180.06,22a1.59,1.59,0,0,0-.1-.57,1.29,1.29,0,0,0-.33-.48,1.65,1.65,0,0,0-.58-.34,2.66,2.66,0,0,0-.85-.13,2.48,2.48,0,0,0-.87.14,1.47,1.47,0,0,0-.57.36,1.39,1.39,0,0,0-.31.5,1.52,1.52,0,0,0-.1.55,1.65,1.65,0,0,0,.11.57,1.29,1.29,0,0,0,.33.48,1.71,1.71,0,0,0,.58.34,2.57,2.57,0,0,0,.84.12,2.42,2.42,0,0,0,.87-.13,1.74,1.74,0,0,0,.57-.36,1.27,1.27,0,0,0,.31-.5A1.56,1.56,0,0,0,180.06,22Z">
+                            </path>
+                            <path class="cls-1"
+                                d="M177.37,11.27a1.36,1.36,0,0,0-.78.2.83.83,0,0,0-.27.73,2.67,2.67,0,0,0,.06.51,3.49,3.49,0,0,0,.15.54H181a1.23,1.23,0,0,1,.12.26,1.13,1.13,0,0,1,0,.34,1.11,1.11,0,0,1-.1.53.46.46,0,0,1-.44.19h-3.29a1.36,1.36,0,0,0-.78.2.86.86,0,0,0-.27.74,2.76,2.76,0,0,0,.06.52,2.52,2.52,0,0,0,.15.52H181a1.59,1.59,0,0,1,.12.27,1.2,1.2,0,0,1,0,.35,1.13,1.13,0,0,1-.1.51.44.44,0,0,1-.43.19h-4.11a3,3,0,0,0-.45,0,1.94,1.94,0,0,0-.32.07,1,1,0,0,0-.27.11,5.14,5.14,0,0,1-.24-.54,1.54,1.54,0,0,1-.07-.42,1.64,1.64,0,0,1,0-.23.74.74,0,0,1,.05-.19.77.77,0,0,1,.29-.08l.31,0v-.07a5.17,5.17,0,0,1-.33-.47,2.28,2.28,0,0,1-.21-.41,3.06,3.06,0,0,1-.1-.38,2.56,2.56,0,0,1,0-.39,2,2,0,0,1,.17-.86,1.25,1.25,0,0,1,.61-.56,3.15,3.15,0,0,1-.63-1.06,2.77,2.77,0,0,1-.15-.85,1.58,1.58,0,0,1,.44-1.17,1.89,1.89,0,0,1,1.41-.45h2.46a8.44,8.44,0,0,0,.85,0,1.17,1.17,0,0,0,.52-.19,1.65,1.65,0,0,1,.25.41,1,1,0,0,1,.06.36.78.78,0,0,1-.19.56.93.93,0,0,1-.7.2Z">
+                            </path>
+                        </g>
+                    </g>
+                </svg> </a>
+            <span id="close_sidebar">
+                ×
+            </span>
+        </div>
+        <ul class="nav_links">
+            <li><a href="/">Home</a></li>
+            <li><a href="/">Categories</a></li>
+            <li><a href="/">Stores</a></li>
+            <li><a href="/">top coupons</a></li>
+            <li><a href="/">featured coupons</a></li>
+            <li><a href="/">news</a></li>
+            <li id="open_model">Login</li>
+        </ul>
+
     </div>
     <header>
         <div class="topmenu">
             <div class="container">
-                <div id="logo" class=""> <a href="/"> <svg id="Layer_1" data-name="Layer 1"
-                            xmlns="http://www.w3.org/2000/svg" viewBox="15 0 170 40" fill="currentColor">
+                <div class="menu_icon" id="sidebar_toggle">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25" viewBox="0,0,256,256"
+                        style="fill:#000000;">
+                        <g fill="#027cd5" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+                            stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                            font-family="none" font-weight="none" font-size="none" text-anchor="none"
+                            style="mix-blend-mode: normal">
+                            <g transform="scale(5.12,5.12)">
+                                <path d="M0,9v2h50v-2zM0,24v2h50v-2zM0,39v2h50v-2z"></path>
+                            </g>
+                        </g>
+                    </svg>
+                </div>
+                <div id="logo" class="">
+                    <a href="/"> <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="15 0 170 40" fill="#027cd5">
                             <defs> </defs>
                             <g id="_Group_" data-name="<Group>">
                                 <g id="_Group_2" data-name="<Group>">
@@ -61,13 +135,29 @@
                                     </path>
                                 </g>
                             </g>
-                        </svg> </a> </div>
+                        </svg> </a>
+                </div>
                 <div class="action">
                     <button id="open_model">Login</button>
                     <button style="background-color: #fff;color: black;">
                         india
                         <img src="https://cdn.countryflags.com/thumbs/india/flag-round-250.png" alt="india">
                     </button>
+                </div>
+                <div class="serch">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25" viewBox="0,0,256,256"
+                        style="fill:#000000;">
+                        <g fill="#027cd5" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+                            stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                            font-family="none" font-weight="none" font-size="none" text-anchor="none"
+                            style="mix-blend-mode: normal">
+                            <g transform="scale(5.12,5.12)">
+                                <path
+                                    d="M21,3c-9.37891,0 -17,7.62109 -17,17c0,9.37891 7.62109,17 17,17c3.71094,0 7.14063,-1.19531 9.9375,-3.21875l13.15625,13.125l2.8125,-2.8125l-13,-13.03125c2.55469,-2.97656 4.09375,-6.83984 4.09375,-11.0625c0,-9.37891 -7.62109,-17 -17,-17zM21,5c8.29688,0 15,6.70313 15,15c0,8.29688 -6.70312,15 -15,15c-8.29687,0 -15,-6.70312 -15,-15c0,-8.29687 6.70313,-15 15,-15z">
+                                </path>
+                            </g>
+                        </g>
+                    </svg>
                 </div>
             </div>
         </div>
@@ -247,4 +337,5 @@
 <script src="script.js">
 
 </script>
+
 </html>
