--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <li><a href="/">top coupons</a></li>
             <li><a href="/">featured coupons</a></li>
             <li><a href="/">news</a></li>
-            <li id="open_model">Login</li>
+            <li class="open_model">Login</li>
         </ul>
 
     </div>
@@ -138,7 +138,7 @@
                         </svg> </a>
                 </div>
                 <div class="action">
-                    <button id="open_model">Login</button>
+                    <button class="open_model">Login</button>
                     <button style="background-color: #fff;color: black;">
                         india
                         <img src="https://cdn.countryflags.com/thumbs/india/flag-round-250.png" alt="india">
